# weather-ticker

./: .gitattributes  .gitignore  CHANGELOG_FRONTEND_INTEGRATION.md  CMakeLists.txt  CONFIGURATION.md  DEVELOPMENT.md  FRONTEND_BUILD.md  README.md  build-frontend.sh  partitions.csv  sdkconfig  sdkconfig.defaults
.devcontainer/: Dockerfile
.github/: copilot-instructions.md
.github/actions/build-project/: action.yml
.github/workflows/: build.yml  build_firmware.yml  release.yml
components/tdisplays3/: CMakeLists.txt  t_display_s3.c  t_display_s3.h
front/: config.html  index.html
front-src/config/: README.md  package-lock.json  package.json  svelte.config.js
front-src/config/src/lib/: ConfigForm.svelte  styles.ts  types.ts
front-src/config/src/lib/sections/: TimeSection.svelte  WiFiSection.svelte
front-src/config/src/routes/: +layout.svelte  +page.svelte
front-src/config/static/api/: config.json  scan.json
front-src/config/static/data/: timezones.json
main/: CMakeLists.txt  barlow_condensed_sb24px.c  barlow_condensed_sb42px.c  base32.c  base32.h  declares.h  display.c  display.h  http_buffer_download.c  idf_component.yml  main.c  montserrat_sb14px.c  ntp_manager.c  ntp_manager.h  nvs_storage.c  nvs_storage.h  openweather_client.c  openweather_parser.c  openweather_service.c  openweather_service.h  psk_generator.c  psk_generator.h  typedefs.h  ui.c  ui.h  ui_clock.c  ui_events.c  ui_events.h  ui_internal.h  ui_precipitation.c  ui_weather.c  url_encode.c  url_encode.h  weather_01d.c  weather_01n.c  weather_02d.c  weather_02n.c  weather_03.c  weather_04.c  weather_09.c  (+14 more)
main/core/: nvs_storage.c  psk_generator.c
main/fonts/: barlow_condensed_sb36px.c  montserrat_sb14px.c
main/images/: feels_like_icon.c  pressure_icon.c  uvi_icon.c  weather_01d.c  weather_01n.c  weather_02n.c  weather_03.c  weather_04.c  weather_09.c  weather_10d.c  weather_10n.c  weather_50.c  weather_na.c  wind_speed_icon.c
main/include/: nvs_storage.h  psk_generator.h  typedefs.h  url_encode.h  wifi_manager.h
main/netutils/: url_encode.c
main/network/: http_buffer_download.h  web_server.c  wifi_manager.h
main/nvs/: nvs_storage.c
main/openweather/: openweather_client.c  openweather_internal.h  openweather_service.h
main/ui/: declares.h  display.c  ui.c  ui.h  ui_clock.c  ui_events.c  ui_internal.h  ui_qrcode.c  weather_utils.c
main/ui/fonts/: barlow_condensed_sb24px.c  barlow_condensed_sb28px.c  barlow_condensed_sb32px.c  barlow_condensed_sb42px.c
main/ui/images/: humidity_icon.c  pressure_icon.c  weather_02d.c  weather_02n.c  weather_04.c  weather_09.c  weather_11d.c  weather_11n.c  weather_13.c  wind_direction_icon.c
main/webserver/: web_api.h
tools/imageconverter/: .gitignore  README.md  downloadAndConvert.py  downloadimages.py  imageconverter.py
tools/mocks/: mock.html
