idf_component_register(SRCS "ui_weather.c" 
                            "ui_precipitation.c" 
                            "http_buffer_download.c" 
                            "openweather_service.c" 
                            "openweather_parser.c" 
                            "url_encode.c" 
                            "openweather_client.c" 
                            "fonts/montserrat_sb14px.c" 
                            "fonts/barlow_condensed_sb42px.c" 
                            "fonts/barlow_condensed_sb36px.c" 
                            "fonts/barlow_condensed_sb32px.c" 
                            "fonts/barlow_condensed_sb28px.c" 
                            "fonts/barlow_condensed_sb24px.c" 
                            "ui_clock.c" 
                            "ui_qrcode.c" 
                            "wifi_scan.c" 
                            "web_api.c" 
                            "web_server.c" 
                            "main.c"
                            "wifi_manager.c"
                            "nvs_storage.c"
                            "psk_generator.c"
                            "display.c"
                            "ui.c"
                            "ui_events.c"
                            "ntp_manager.c"
                            "images/weather_01d.c"
                            "images/weather_01n.c"
                            "images/weather_02d.c"
                            "images/weather_02n.c"
                            "images/weather_03.c"
                            "images/weather_04.c"
                            "images/weather_09.c"
                            "images/weather_10d.c"
                            "images/weather_10n.c"
                            "images/weather_11d.c"
                            "images/weather_11n.c"
                            "images/weather_13.c"
                            "images/weather_50.c"
                            "images/weather_na.c" 
                            "images/feels_like_icon.c"
                            "weather_utils.c" 
                    INCLUDE_DIRS ".")
